--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
       href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&family=Oswald:wght@400;600&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/icon-style.css" />
+    <link rel="stylesheet" href="https://mortiff75.github.io/nature/css/icon-style.css" />
 
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="https://mortiff75.github.io/nature/css/styles.css" />
   </head>
   <body>
     <div class="navigation">
