--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <header class="header">
       <div class="header__logo-box">
         <img
-          src="/assets/king.png"
+          src="https://mortiff75.github.io/nature/assets/king.png"
           alt="logo"
           class="header__logo"
           id="navi-toggle"
@@ -99,17 +99,17 @@
           <div class="flex-1">
             <div class="composition">
               <img
-                src="/assets/p1.jpg"
+                src="https://mortiff75.github.io/nature/assets/p1.jpg"
                 alt="slider"
                 class="composition__photo composition__photo--p1"
               />
               <img
-                src="/assets/p2.jpg"
+                src="https://mortiff75.github.io/nature/assets/p2.jpg"
                 alt="slider"
                 class="composition__photo composition__photo--p2"
               />
               <img
-                src="/assets/p3.jpg"
+                src="https://mortiff75.github.io/nature/assets/p3.jpg"
                 alt="slider"
                 class="composition__photo composition__photo--p3"
               />
@@ -290,7 +290,7 @@
         <div class="row flex-column u-gap-8">
           <div class="story">
             <figure class="story__shape">
-              <img src="/assets/f2.jpg" alt="tour" class="story__img" />
+              <img src="https://mortiff75.github.io/nature/assets/f2.jpg" alt="tour" class="story__img" />
               <figcaption class="story__caption">Mary Smith</figcaption>
             </figure>
             <div class="story__text">
@@ -308,7 +308,7 @@
 
           <div class="story">
             <figure class="story__shape">
-              <img src="/assets/p1.jpg" alt="tour" class="story__img" />
+              <img src="https://mortiff75.github.io/nature/assets/p1.jpg" alt="tour" class="story__img" />
               <figcaption class="story__caption">Jack Wilson</figcaption>
             </figure>
             <div class="story__text">
@@ -404,7 +404,7 @@
 
       <footer class="footer">
         <div class="footer__logo-box">
-          <img src="./assets/king.png" alt="logo" class="footer__logo" />
+          <img src="https://mortiff75.github.io/nature/assets/king.png" alt="logo" class="footer__logo" />
         </div>
         <div class="row u-gap-3">
           <div class="flex-1 u-text-center">
@@ -446,8 +446,8 @@
       <div class="popup" id="popup">
         <div class="popup__content">
           <div class="popup__content-left">
-            <img src="./assets/p2.jpg" alt="o" class="popup__img" />
-            <img src="./assets/t2.jpg" alt="s" class="popup__img" />
+            <img src="https://mortiff75.github.io/nature/assets/p2.jpg" alt="o" class="popup__img" />
+            <img src="https://mortiff75.github.io/nature/assets/t2.jpg" alt="s" class="popup__img" />
           </div>
           <div class="popup__content-right">
             <a class="popup__close" href="#section-tours">&times;</a>
