--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
       <section class="section_stories">
         <div class="bg-video">
           <video class="bg-video__content" autoplay muted loop controls>
-            <source src="assets/video/pixel.mp4" type="video/mp4" />
+            <source src="https://mortiff75.github.io/nature/assets/video/pixel.mp4" type="video/mp4" />
             Your Browser not supported this video
           </video>
         </div>
